[gd_scene load_steps=16 format=3 uid="uid://bueo3wit2pfgq"]

[ext_resource type="Script" uid="uid://daxf747gw1daf" path="res://Scripts/pause_menu.gd" id="1_1och7"]
[ext_resource type="Shader" uid="uid://bvv10h7jpabc5" path="res://Scenes/pausemenu.gdshader" id="2_bpi0q"]
[ext_resource type="FontFile" uid="uid://lgonavu6dp4m" path="res://KiwiSoda.ttf" id="3_vmyb1"]
[ext_resource type="AudioStream" uid="uid://sypggs5xvp4t" path="res://SfX/Menu Selection Click.wav" id="4_bpi0q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_myy0f"]
shader = ExtResource("2_bpi0q")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjs17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u8tnp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_stj27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ix48p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmyb1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myy0f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_524vl"]

[sub_resource type="Animation" id="Animation_0fi7f"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.800000038]
}

[sub_resource type="Animation" id="Animation_524vl"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.800000038]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uscpe"]
_data = {
&"RESET": SubResource("Animation_0fi7f"),
&"blur": SubResource("Animation_524vl")
}

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_1och7")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_myy0f")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -206.0
offset_right = 84.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sjs17")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.21950102, 0.21950102, 0.21950102, 1)
theme_override_fonts/font = ExtResource("3_vmyb1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_stj27")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix48p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_524vl")
text = "Resume
"

[node name="Main_Menu" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.21950102, 0.21950102, 0.21950102, 1)
theme_override_fonts/font = ExtResource("3_vmyb1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_stj27")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix48p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_524vl")
text = "Main menu"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.21950102, 0.21950102, 0.21950102, 1)
theme_override_fonts/font = ExtResource("3_vmyb1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_stj27")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix48p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_524vl")
text = "Restart"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.21950102, 0.21950102, 0.21950102, 1)
theme_override_fonts/font = ExtResource("3_vmyb1")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_stj27")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ix48p")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_524vl")
text = "Exit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uscpe")
}

[node name="click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bpi0q")

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
